--- a/contract.html
+++ b/contract.html
@@ -1,9 +1,9 @@
-<!<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact • TitanCore</title>
+  <title>Contract • TitanCore</title>
   <link rel="stylesheet" href="styles.css?v=20260117" />
 </head>
 <body>
@@ -11,8 +11,8 @@
     <div class="brand">
       <div class="logo">TC</div>
       <div class="brandText">
-        <div class="title">Contact</div>
-        <div class="subtitle">Executive visibility • call volume • transfers • routing</div>
+        <div class="title">Contract</div>
+        <div class="subtitle">Data tracking • status • approvals • no editing</div>
       </div>
     </div>
     <div class="sysBox">
@@ -27,56 +27,52 @@
       <section class="card">
         <div class="cardHead">
           <div>
-            <div class="cardTitle green">Contact Center</div>
-            <div class="muted">Read-only executive dashboard (real logs connect later)</div>
+            <div class="cardTitle green">Contract Center</div>
+            <div class="muted">Executive pipeline visibility</div>
           </div>
           <a class="pillBtn" href="index.html">Back to Dashboard</a>
         </div>
 
         <div class="list">
-          <div class="row" id="call-volume">
+          <div class="row" id="pipeline">
             <div>
-              <div class="rowTitle">Call Volume (24h)</div>
-              <div class="muted">Calls In • Calls Out • totals across all companies</div>
-            </div>
-            <div class="muted">—</div>
-          </div>
-
-          <div class="row" id="transfers">
-            <div>
-              <div class="rowTitle">Transfers & Routing</div>
-              <div class="muted">TitanCore receives → AI routes → transfers to company</div>
+              <div class="rowTitle">Tracking Pipeline</div>
+              <div class="muted">New • In Review • Pending Approval • Closed</div>
             </div>
             <div class="muted">Ready</div>
           </div>
 
-          <div class="row" id="caller-types">
+          <div class="row" id="status">
             <div>
-              <div class="rowTitle">Caller Types</div>
-              <div class="muted">Client • Bank/Institution • Investor • Vendor</div>
+              <div class="rowTitle">Status</div>
+              <div class="muted">Cross-company status view</div>
             </div>
             <div class="muted">Ready</div>
           </div>
 
-          <div class="row" id="company-breakdown">
+          <div class="row" id="titan-review">
             <div>
-              <div class="rowTitle">Company Breakdown</div>
-              <div class="muted">Which company they requested • where the call went</div>
+              <div class="rowTitle">TitanCore Review Queue</div>
+              <div class="muted">Packages waiting for TitanCore department review</div>
+            </div>
+            <div class="muted">Ready</div>
+          </div>
+
+          <div class="row" id="audit">
+            <div>
+              <div class="rowTitle">History & Audit Trail</div>
+              <div class="muted">Who touched what • when • decision notes</div>
             </div>
             <div class="muted">Ready</div>
           </div>
         </div>
 
         <div class="divider"></div>
-
-        <div class="muted">
-          RingCentral backend connection will fill real counts/logs.
-          This page stays executive read-only.
-        </div>
+        <div class="muted">Read-only. Real data connects after systems are wired.</div>
       </section>
     </section>
 
-    <footer class="footer">TitanCore • Contact Module — read-only</footer>
+    <footer class="footer">TitanCore • Contract Module — read-only</footer>
   </main>
 
   <script src="app.js?v=20260117"></script>
