--- a/email.html
+++ b/email.html
@@ -2,190 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TitanCore Executive Control Center — Email Routing</title>
-<link rel="stylesheet" href="/styles.css?v=2">
-<script src="/app.js?v=2" defer></script>
-  <style>
-    .wrap{max-width:1200px;margin:0 auto;padding:16px}
-    .panel{background:rgba(0,0,0,.35);border:1px solid rgba(212,175,55,.35);border-radius:18px;padding:16px;margin-top:14px}
-    .tag{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(0,200,83,.35);color:#00c853;font-size:12px}
-    .muted{opacity:.85}
-    .kpis{display:grid;grid-template-columns:repeat(4,minmax(0,1fr));gap:12px}
-    @media(max-width:900px){.kpis{grid-template-columns:repeat(2,1fr)}}
-    .kpi{border:1px solid rgba(212,175,55,.25);border-radius:16px;padding:12px;background:rgba(0,0,0,.25)}
-    .k{font-size:12px;opacity:.8;text-transform:uppercase;letter-spacing:.08em}
-    .v{font-size:22px;margin-top:6px;color:#00c853}
-    table{width:100%;border-collapse:separate;border-spacing:0 10px}
-    th{font-size:12px;opacity:.7;text-align:left;padding:0 10px}
-    td{padding:12px 10px;background:rgba(0,0,0,.25);border-top:1px solid rgba(212,175,55,.18);border-bottom:1px solid rgba(212,175,55,.18)}
-    tr td:first-child{border-left:1px solid rgba(212,175,55,.18);border-radius:14px 0 0 14px}
-    tr td:last-child{border-right:1px solid rgba(212,175,55,.18);border-radius:0 14px 14px 0}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;border:1px solid rgba(212,175,55,.25);font-size:12px}
-    .ok{border-color:rgba(0,200,83,.35);color:#00c853}
-    .warn{border-color:rgba(255,195,0,.45);color:#ffd54a}
-    .bad{border-color:rgba(255,90,90,.55);color:#ff8a8a}
-    .btn{padding:8px 12px;border-radius:999px;border:1px solid rgba(212,175,55,.35);background:rgba(0,0,0,.35);color:#eaeaea;cursor:pointer}
-    .btn.danger{border-color:rgba(255,90,90,.6);color:#ff8a8a}
-    .btn.ghost{opacity:.85}
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Email Routing • TitanCore</title>
+  <link rel="stylesheet" href="styles.css?v=20260117" />
 </head>
-  <thead>
-  <tr>
-    <th>Time</th>
-    <th>Dir</th>
-    <th>Mailbox</th>
-    <th>From</th>
-    <th>To</th>
-    <th>Subject</th>
-    <th>Status</th>
-  </tr>
-</thead>
-
 <body>
-<div class="wrap">
-
-<nav class="menu" aria-label="TitanCore Menu">
-  <a class="menu-btn" href="/index.html">Dashboard</a>
-  <a class="menu-btn" href="/contact.html">Contact</a>
-  <a class="menu-btn" href="/contract.html">Contract</a>
-  <a class="menu-btn" href="/email.html">Email Routing</a>
-  <a class="menu-btn" href="/report.html">Report</a>
-  <a class="menu-btn" href="/approval.html">Approval</a>
-  <a class="menu-btn" href="/omni-system.html">Omni System</a>
-  <a class="menu-btn" href="/tax-network.html">Tax Network</a>
-  <a class="menu-btn" href="/agent-suite.html">Agent A.I. Suite</a>
-  <a class="menu-btn" href="/public-portal.html">Public Portal</a>
-</nav>
-
-<script>
-  // Auto-highlight current page as GREEN button (no manual "active" needed)
-  (function () {
-    const path = (location.pathname || "/index.html").toLowerCase();
-    document.querySelectorAll(".nav a").forEach(a => {
-      const href = (a.getAttribute("href") || "").toLowerCase();
-      if (href === path || (path === "/" && href === "/index.html")) {
-        a.classList.add("active");
-      } else {
-        a.classList.remove("active");
-      }
-    });
-  })();
-</script>
-  <!-- HEADER -->
-  <div class="panel">
-    <span class="tag">EMAIL ROUTING — RECORDS ONLY</span>
-    <h1>Email Oversight & Routing Control</h1>
-    <p class="muted">
-      This page records <strong>contact / invest / admin</strong> emails across all companies.
-      No sending, no replying — visibility, delays, escalation only.
-    </p>
-  </div>
-
-  <!-- KPIs -->
-  <div class="panel">
-    <div class="kpis">
-      <div class="kpi"><div class="k">Total Emails</div><div class="v" id="k_total">—</div></div>
-      <div class="kpi"><div class="k">Pending Response</div><div class="v" id="k_pending">—</div></div>
-      <div class="kpi"><div class="k">Escalated</div><div class="v" id="k_escalated">—</div></div>
-      <div class="kpi"><div class="k">Overdue</div><div class="v" id="k_overdue">—</div></div>
+  <header class="topbar">
+    <div class="brand">
+      <div class="logo">TC</div>
+      <div class="brandText">
+        <div class="title">Email Routing</div>
+        <div class="subtitle">Global inbox flow • routing visibility • executive read-only</div>
+      </div>
     </div>
-  </div>
-
-  <!-- TABLE -->
-  <div class="panel">
-    <h2>Email Log</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Company</th>
-          <th>Email Type</th>
-          <th>Address</th>
-          <th>Direction</th>
-          <th>Status</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="emailBody"></tbody>
-    </table>
-
-    <div style="margin-top:10px">
-      <button class="btn ghost" onclick="seed()">Load Sample</button>
-      <button class="btn danger" onclick="clearAll()">Clear</button>
+    <div class="sysBox">
+      <div class="sysRow"><div class="sysLabel">Mode</div><div class="sysValue">CEO</div></div>
+      <div class="sysRow"><div class="sysLabel">Status</div><div class="sysValue statusActive">Active</div></div>
+      <div class="sysRow"><div class="sysLabel">System Time</div><div class="sysValue" id="sysTime">—</div></div>
     </div>
-  </div>
+  </header>
 
-</div>
+  <main class="wrap">
+    <section class="grid" style="grid-template-columns:1fr;">
+      <section class="card">
+        <div class="cardHead">
+          <div>
+            <div class="cardTitle green">Email Routing Center</div>
+            <div class="muted">Visibility only (who receives what)</div>
+          </div>
+          <a class="pillBtn" href="index.html">Back to Dashboard</a>
+        </div>
 
-<script>
-const KEY = "tc_email_routing_v1";
+        <div class="list">
+          <div class="row" id="inboxes">
+            <div>
+              <div class="rowTitle">Inboxes</div>
+              <div class="muted">Contact • Investor • Admin • Legal • Finance</div>
+            </div>
+            <div class="muted">Ready</div>
+          </div>
 
-function load(){ return JSON.parse(localStorage.getItem(KEY) || "[]"); }
-function save(d){ localStorage.setItem(KEY, JSON.stringify(d)); }
-function now(){ return new Date().toLocaleString(); }
+          <div class="row" id="rules">
+            <div>
+              <div class="rowTitle">Routing Rules</div>
+              <div class="muted">Subject rules • sender rules • company rules</div>
+            </div>
+            <div class="muted">Ready</div>
+          </div>
 
-function pill(status){
-  if(status==="Pending") return '<span class="pill warn">Pending</span>';
-  if(status==="Escalated") return '<span class="pill bad">Escalated</span>';
-  return '<span class="pill ok">Resolved</span>';
-}
+          <div class="row" id="volume">
+            <div>
+              <div class="rowTitle">Volume & Trends</div>
+              <div class="muted">Daily/weekly counts • spikes</div>
+            </div>
+            <div class="muted">Ready</div>
+          </div>
 
-function render(){
-  const data = load();
-  const body = document.getElementById("emailBody");
-  body.innerHTML = "";
+          <div class="row" id="flags">
+            <div>
+              <div class="rowTitle">Flags & Attention</div>
+              <div class="muted">Urgent • bank/institution • legal</div>
+            </div>
+            <div class="muted">Ready</div>
+          </div>
+        </div>
 
-  let pending=0, escalated=0, overdue=0;
+        <div class="divider"></div>
+        <div class="muted">Read-only. Real inbox data connects later.</div>
+      </section>
+    </section>
 
-  data.forEach((e,i)=>{
-    if(e.status==="Pending") pending++;
-    if(e.status==="Escalated") escalated++;
-    if(e.overdue) overdue++;
+    <footer class="footer">TitanCore • Email Routing — read-only</footer>
+  </main>
 
-    body.innerHTML += `
-      <tr>
-        <td>${e.date}</td>
-        <td>${e.company}</td>
-        <td>${e.type}</td>
-        <td>${e.address}</td>
-        <td>${e.direction}</td>
-        <td>${pill(e.status)}</td>
-        <td>
-          <button class="btn ghost" onclick="resolve(${i})">Resolve</button>
-          <button class="btn danger" onclick="remove(${i})">Delete</button>
-        </td>
-      </tr>`;
-  });
-
-  document.getElementById("k_total").innerText = data.length || "—";
-  document.getElementById("k_pending").innerText = pending || "—";
-  document.getElementById("k_escalated").innerText = escalated || "—";
-  document.getElementById("k_overdue").innerText = overdue || "—";
-}
-
-function resolve(i){
-  const d = load();
-  d[i].status="Resolved";
-  save(d); render();
-}
-function remove(i){
-  const d = load();
-  d.splice(i,1);
-  save(d); render();
-}
-function clearAll(){ save([]); render(); }
-
-function seed(){
-  save([
-    {date:now(),company:"Vaultara Capital",type:"contact",address:"contact@vaultaracapital.com",direction:"Inbound",status:"Pending",overdue:false},
-    {date:now(),company:"Family First Equity Group",type:"invest",address:"invest@familyfirstequatygroup.com",direction:"Inbound",status:"Escalated",overdue:true},
-    {date:now(),company:"TitanCore Holdings",type:"admin",address:"admin@titancoreholdings.com",direction:"Inbound",status:"Resolved",overdue:false}
-  ]);
-  render();
-}
-
-render();
-</script>
+  <script src="app.js?v=20260117"></script>
 </body>
 </html>
