--- a/contract.html
+++ b/contract.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact • TitanCore</title>
+  <title>Contract • TitanCore</title>
   <link rel="stylesheet" href="styles.css" />
   <script defer src="app.js"></script>
 </head>
@@ -12,8 +12,8 @@
     <div class="brand">
       <div class="logo">TC</div>
       <div class="brandText">
-        <div class="brandTitle">CONTACT CENTER</div>
-        <div class="brandSub">Call volume • transfers • routing • visibility only</div>
+        <div class="brandTitle">CONTRACT CENTER</div>
+        <div class="brandSub">Data tracking • status • approvals • read-only</div>
       </div>
     </div>
 
@@ -32,122 +32,66 @@
         <div class="dashLabel">Quick Jump</div>
         <div class="pill">Tap a view</div>
       </div>
-
       <div class="quickJump">
-        <a href="#call-volume">Call Volume (In/Out)</a>
-        <a href="#transfers-routing">Transfers & Routing</a>
-        <a href="#caller-types">Caller Types</a>
-        <a href="#company-breakdown">Company Breakdown</a>
+        <a href="#tracking-pipeline">Tracking Pipeline</a>
+        <a href="#status">Status</a>
+        <a href="#titan-review-queue">TitanCore Review Queue</a>
+        <a href="#history-audit-trail">History & Audit Trail</a>
         <a href="index.html#nav">Back to Dashboard</a>
       </div>
     </section>
 
-    <section class="card sectionBlock" id="call-volume">
+    <section class="card sectionBlock" id="tracking-pipeline">
       <div class="cardHeader sectionTitle">
-        <div class="dashLabel">Call Volume (In/Out)</div>
-        <div class="tag">24h summary</div>
+        <div class="dashLabel">Tracking Pipeline</div>
+        <div class="tag">workflow</div>
       </div>
       <div class="list">
-        <div class="listItem">
-          <div class="liTitle">Calls In (24h)</div>
-          <div class="liSub">Inbound totals across all companies</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Calls Out (24h)</div>
-          <div class="liSub">Outbound totals across all companies</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="note">
-          Read-only. Real counts populate after RingCentral integration.
-        </div>
+        <div class="listItem"><div class="liTitle">New</div><div class="liSub">Submitted packages</div><div class="liOpen">Ready</div></div>
+        <div class="listItem"><div class="liTitle">In Review</div><div class="liSub">Departments reviewing</div><div class="liOpen">Ready</div></div>
+        <div class="listItem"><div class="liTitle">Pending Approval</div><div class="liSub">Waiting for signature chain</div><div class="liOpen">Ready</div></div>
+        <div class="listItem"><div class="liTitle">Closed</div><div class="liSub">Completed and filed</div><div class="liOpen">Ready</div></div>
       </div>
     </section>
 
-    <section class="card sectionBlock" id="transfers-routing">
+    <section class="card sectionBlock" id="status">
       <div class="cardHeader sectionTitle">
-        <div class="dashLabel">Transfers & Routing</div>
-        <div class="tag">visibility</div>
+        <div class="dashLabel">Status</div>
+        <div class="tag">cross-company</div>
       </div>
       <div class="list">
-        <div class="listItem">
-          <div class="liTitle">TitanCore → Company Transfers</div>
-          <div class="liSub">How many calls were routed to each company</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Escalations</div>
-          <div class="liSub">Bank / Institution / VIP escalations</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="note">
-          This page collects data only. It does not place calls.
-        </div>
+        <div class="listItem"><div class="liTitle">Open Contracts</div><div class="liSub">All companies</div><div class="liOpen">—</div></div>
+        <div class="listItem"><div class="liTitle">At Risk</div><div class="liSub">SLA, compliance, missing docs</div><div class="liOpen">—</div></div>
+        <div class="note">Read-only. Real status comes after systems are wired.</div>
       </div>
     </section>
 
-    <section class="card sectionBlock" id="caller-types">
+    <section class="card sectionBlock" id="titan-review-queue">
       <div class="cardHeader sectionTitle">
-        <div class="dashLabel">Caller Types</div>
-        <div class="tag">classification</div>
+        <div class="dashLabel">TitanCore Review Queue</div>
+        <div class="tag">executive</div>
       </div>
       <div class="list">
-        <div class="listItem">
-          <div class="liTitle">Client</div>
-          <div class="liSub">General service inquiries</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Bank / Institution</div>
-          <div class="liSub">Priority handling</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Investor</div>
-          <div class="liSub">Funding / equity / partnership</div>
-          <div class="liOpen">—</div>
-        </div>
+        <div class="listItem"><div class="liTitle">Packages waiting for TitanCore review</div><div class="liSub">From companies</div><div class="liOpen">Ready</div></div>
+        <div class="listItem"><div class="liTitle">Priority items</div><div class="liSub">Bank/Institution</div><div class="liOpen">Ready</div></div>
       </div>
     </section>
 
-    <section class="card sectionBlock" id="company-breakdown">
+    <section class="card sectionBlock" id="history-audit-trail">
       <div class="cardHeader sectionTitle">
-        <div class="dashLabel">Company Breakdown</div>
-        <div class="tag">all companies</div>
+        <div class="dashLabel">History & Audit Trail</div>
+        <div class="tag">logging</div>
       </div>
       <div class="list">
-        <div class="listItem">
-          <div class="liTitle">TitanCore Holdings</div>
-          <div class="liSub">Inbound / transfers / escalations</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Vaultara Capital</div>
-          <div class="liSub">Inbound / transfers / escalations</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">VitalPath Care Group</div>
-          <div class="liSub">Inbound / transfers / escalations</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">RevMotion Auto & Marine</div>
-          <div class="liSub">Inbound / transfers / escalations</div>
-          <div class="liOpen">—</div>
-        </div>
-        <div class="listItem">
-          <div class="liTitle">Family First Equity Group</div>
-          <div class="liSub">Inbound / transfers / escalations</div>
-          <div class="liOpen">—</div>
-        </div>
+        <div class="listItem"><div class="liTitle">Who touched what</div><div class="liSub">timeline</div><div class="liOpen">Ready</div></div>
+        <div class="listItem"><div class="liTitle">Decision notes</div><div class="liSub">approval comments</div><div class="liOpen">Ready</div></div>
       </div>
     </section>
   </main>
 
   <footer class="foot">
     <div class="footInner">
-      <div class="muted">TitanCore • Contact Module • read-only</div>
+      <div class="muted">TitanCore • Contract Module • read-only</div>
     </div>
   </footer>
 </body>
